--- a/styles/global.css
+++ b/styles/global.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;400;500;700&display=swap');
 
 
-
 html,
 body {
   padding: 0;
@@ -9,6 +8,7 @@ body {
   font-family: 'Josefin Sans', sans-serif;
   line-height: 1.6;
   font-size: 18px;
+  background-color: #fcfcfc;
 }
 
 * {
